Add insert many route
